# spdlog_wrapper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/frame/log/: BinaryLog.cpp  BinaryLog.h  Log.cpp  Log.h
src/frame/thread/: ThreadUtils.cpp  ThreadUtils.h
src/frame/time/: TimeTracker.cpp  TimeTracker.h
test/: BinaryLogTest.cpp  CMakeLists.txt  LogTest.cpp
test/conf/log/: test_log.toml
